support more jdk